[package]
name = "cgtool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.0-beta.5", features = ["derive"] }
rust_decimal = "1.16"
# anyhow = "1" # deal error
thiserror = "1.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = { version = "1.0.68", features = [] }
